# web_app_backend/controllers/gameController.go
@@ -12,6 +12,12 @@ func getAllGamesWrapper() (interface{}, error) {
 }
 
 // Get all games
+// @Summary Get all games
+// @Description Retrieve the list of all games
+// @Tags games
+// @Produce json
+// @Success 200 {array} models.Game
+// @Router /games [get]
 func GetAllGames(c *gin.Context) {
 	helpers.HandleGetAll(c, getAllGamesWrapper)
 }
@@ -21,12 +27,26 @@ func getGameByIDWrapper(id string) (interface{}, error) {
 	return services.GetGameByID(id)
 }
 
-// Create a new game
+// @Summary Create a new game
+// @Description Add a new game to the database
+// @Tags games
+// @Accept json
+// @Produce json
+// @Param game body models.Game true "Game data"
+// @Success 201 {object} models.Game
+// @Router /games [post]
 func CreateGame(c *gin.Context) {
 	helpers.HandleCreate(c, services.CreateGame)
 }
 
-// Get a game by ID
+// @Summary Get a game by ID
+// @Description Retrieve a specific game by its ID
+// @Tags games
+// @Produce json
+// @Param id path int true "Game ID"
+// @Success 200 {object} models.Game
+// @Failure 404 {object} map[string]string
+// @Router /games/{id} [get]
 func GetGameByID(c *gin.Context) {
 	helpers.HandleGetByID(c, "id", getGameByIDWrapper)
 }
